# STRATEGYHL

./: .env  .gitignore  AGENT.md  MEMO.txt  PROJECT_SPEC.md  README.md  REPO_ID.txt  _tmp_strategy_py.diff  manifest.json  pyproject.toml
configs/: example.yaml  strategy_baseline.yaml  strategy_boost_abs_mid_ret_p90_f15.yaml  strategy_boost_abs_mid_ret_p90_f15_inv_cap.yaml  strategy_boost_abs_mid_ret_thrP90_f12.yaml  strategy_boost_abs_mid_ret_thrP90_f15.yaml  strategy_boost_abs_mid_ret_thrP90_f20.yaml  strategy_flow_asksize_thrP95_f03.yaml  strategy_flow_asksize_thrP95_f05.yaml  strategy_flow_asksize_thrP95_f07.yaml  strategy_flow_base.yaml  strategy_flow_base_thrP95.yaml  strategy_flow_one_side_size_sf0p3.yaml  strategy_flow_one_side_size_sf0p5.yaml  strategy_flow_one_side_size_sf0p7.yaml  strategy_flow_one_side_widen_bps1.yaml  strategy_flow_one_side_widen_bps2.yaml  strategy_flow_one_side_widen_bps3.yaml  strategy_flow_one_side_widen_off.yaml  strategy_flow_sym_size_thrP95_f03.yaml  strategy_flow_sym_size_thrP95_f05.yaml  strategy_flow_sym_size_thrP95_f07.yaml  strategy_halt_abs_mid_ret_thrP90.yaml  strategy_halt_abs_mid_ret_thrP95.yaml  strategy_halt_abs_mid_ret_thrP97.yaml  strategy_halt_market_spread_thrP90.yaml  strategy_halt_market_spread_thrP95.yaml  strategy_halt_market_spread_thrP97.yaml  strategy_micro_bias_askonly_thrP99_f03.yaml  strategy_micro_bias_askonly_thrP99_f05.yaml  strategy_micro_bias_askonly_thrP99_f07.yaml  strategy_micro_bias_size_thrP95_f03.yaml  strategy_micro_bias_size_thrP95_f05.yaml  strategy_micro_bias_size_thrP95_f07.yaml  strategy_micro_pos_size_thr0p25_f03.yaml  strategy_micro_pos_size_thr0p25_f05.yaml  strategy_micro_pos_size_thr0p25_f07.yaml  strategy_prod_f15.yaml  strategy_prod_f15_b1.yaml  (+41 more)
(+1177 files in other folders)
